tests/macro-tests/cases/widget_new/when_missing_expr1.stderr
error: expected when expression
 --> cases/widget_new/when_missing_expr1.rs:6:13
  |
6 |     let _ = Wgt! { when };
  |             ^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `Wgt` (in Nightly builds, run with -Z macro-backtrace for more info)
